# InfoWindow

./: .gitattributes  .gitignore  README.md  clearScreen.py  config.json-sample  infowindow.py  pyproject.toml  requirements.txt  screensaver.py
3d_files/fusion360/: README.md
infowindow/: __main__.py  config.py  layout.py
infowindow/display/: __init__.py  canvas.py  epd.py  mock.py
infowindow/sources/: loader.py  types.py
infowindow/sources/calendar/: caldav.py  google.py
infowindow/sources/todo/: caldav.py  google.py  teamwork.py  todoist.py
infowindow/sources/weather/: owm.py
infowindow/utils/: google_auth.py  paths.py
mod_calendar/: mod_caldav.py  mod_google.py
mod_infowindow/: clearScreen.py  infowindow.py
mod_infowindow/mod_infowindow/: infowindow.py
mod_infowindow/mod_todo/: mod_todoist.py
mod_todo/: mod_caldav.py  mod_google.py  mod_grocy.py  mod_todoist.py
mod_weather/: mod_owm.py
