[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "infowindow"
version = "0.1.0"
description = "E-ink info display for Raspberry Pi"
requires-python = ">=3.11"
dependencies = [
    "Pillow",
    "requests",
]

[project.optional-dependencies]
rpi = [
    "spidev",
    "RPi.GPIO",
    "gpiozero",
]
google = [
    "google-api-python-client",
    "google-auth-oauthlib",
]
caldav = [
    "caldav",
    "python-dateutil",
    "pytz",
]
todoist = [
    # todoist-python (v8 API) is unmaintained; kept for compatibility only.
    # Migrate to todoist-api-python when updating this backend.
    "todoist-python",
]

[project.scripts]
infowindow = "infowindow.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["infowindow*"]
